--- a/src/main/resources/templates/layouts/Master/unitMaster.html
+++ b/src/main/resources/templates/layouts/Master/unitMaster.html
@@ -36,12 +36,12 @@
 			<!-- Content Header (Page header) -->
 			<section class="content-header">
 				<h1>
-					UnitMaster <small>it all starts here</small>
+					UnitMaster <small></small>
 				</h1>
 				<ol class="breadcrumb">
-					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Home</a></li>
-					<li><a href="#">Examples</a></li>
-					<li class="active">Blank page</li>
+					<li><a th:href="@{/home}"><i class="fa fa-dashboard"></i> Master</a></li>
+					<li><a href="#">StoreMaster</a></li>
+					<li class="active">Unit</li>
 				</ol>
 			</section>
 
@@ -56,7 +56,35 @@
 
 
 
-					<div class="row">
+					
+									<!-- /.box-header -->
+									<!-- form start -->
+									<form id="categoryForm" role="form" method="POST" th:action="@{/unit/}"
+										th:object="${unit}">
+										
+										<div class="box">
+
+								<div class="box-header with-border text-right">
+
+									<button type="submit" id="submit"
+										class="btn btn-primary btn-sm">
+										<i class="fa fa-hdd-o" aria-hidden="true"></i> Submit
+									</button>
+									<button type="reset" value="reset"
+										class="btn btn-secondary btn-sm">
+										<i class="fa fa-refresh" aria-hidden="true"></i> Reset
+									</button>
+
+									<a th:href="@{/unit/list}"
+										class="btn btn-success btn-sm"> <i class="fa fa-list"
+										aria-hidden="true"></i> View All
+									</a>
+
+
+
+								</div>
+								
+								<div class="row">
 						<!-- left column -->
 						<div class="col-md-12">
 							<div class="col-md-2"></div>
@@ -69,10 +97,9 @@
 									<div class="box-header with-border">
 										<!--<h3 class="box-title">Category Master</h3>-->
 									</div>
-									<!-- /.box-header -->
-									<!-- form start -->
-									<form id="categoryForm" role="form" method="POST" th:action="@{/unit/}"
-										th:object="${unit}">
+
+										
+										
 										<div class="box-body">
 
 											<div class="form-group col-md-6">
@@ -90,7 +117,7 @@
 
 											<!--
 -->
-											<div class="form-group col-md-10">
+											<div class="form-group col-md-12">
 												<label for="inputEmail7">Address</label> <input type="text"
 													class="form-control " placeholder=" " title="address"
 													th:field="*{addr}">
@@ -103,7 +130,7 @@
 
 										</div>
 										<!-- /.box-body -->
-
+<!--
 										<div class="box-footer" style="margin: 10px">
 											<input type="submit" value="Submit" class="btn btn-primary" />
 											<input type="reset" value="Reset" class="btn btn-danger" />
@@ -112,7 +139,7 @@
 										<div style="width: parent; text-align-last: right; margin: 8px">
 											<a th:href="@{/unit/list}">view all unit</a>
 										</div>
-
+-->
 
 									</form>
 
