--- a/src/main/resources/templates/layouts/editview/editSubCategory.html
+++ b/src/main/resources/templates/layouts/editview/editSubCategory.html
@@ -31,9 +31,9 @@
 							<!--<small>it all starts here</small>-->
 						</h4>
 						<ol class="breadcrumb">
-							<li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-							<li><a href="#">Examples</a></li>
-							<li class="active">Blank page</li>
+							<li><a href="#"><i class="fa fa-dashboard"></i> Master</a></li>
+							<li><a href="#">StoreMaster</a></li>
+							<li class="active">Edit</li>
 						</ol>
 					</section>
 
@@ -55,7 +55,7 @@
 									<div class="col-md-8">
 										<!-- general form elements -->
 										<div class="box box-primary ">
-											<div class="box-header with-border">
+											
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div>
 											<!-- /.box-header -->
@@ -63,6 +63,30 @@
 											<form role="form" th:action="@{/subcategory/update/}" method="POST"
 												th:object="${subCategory}">
 												<div class="box-body">
+												
+												
+												
+													<div class="col-md-12">
+
+										<div class="box-header with-border text-right">
+
+											<button type="submit" id="submit"
+												class="btn btn-primary btn-sm">
+												<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply Changes
+											</button>
+
+
+
+											<button type="button" class="btn btn-danger btn-sm"
+												onclick="history.back()">
+												<i class="fa fa-step-backward"></i> Go Back
+											</button>
+
+
+
+
+										</div>
+
 
 													<div class="form-group col-md-6">
 														<label>Sub-Category Code</label><span
@@ -113,13 +137,6 @@
 
 												</div>
 												<!-- /.box-body -->
-
-												<div class="box-footer" style="margin: 10px">
-													<input type="submit" value="Apply Changes"
-														class="btn btn-primary" />
-													<input type="button" value="Go back!" class="btn btn-danger"
-														onclick="history.back()">
-												</div>
 
 
 											</form>
