--- a/src/main/resources/templates/layouts/Master/openIndent.html
+++ b/src/main/resources/templates/layouts/Master/openIndent.html
@@ -82,7 +82,7 @@
 
 
 
-								<div class="row">
+								<div class="row" style="margin-right:5px;">
 									<!-- left column -->
 
 									<div class="box-header with-border text-right">
@@ -318,7 +318,7 @@
 
 																		<td><input type="text"
 																			class="form-control form-control-sm floatNumberField"
-																			id="approvedQty0" title="approvaed qty"
+																			id="approvedQty0" title="approved qty"
 																			name="opeIndentDetail[0].approvedQty"
 																			style="text-align: right" readonly></td>
 
