--- a/src/main/resources/templates/layouts/Master/openIndentApproval.html
+++ b/src/main/resources/templates/layouts/Master/openIndentApproval.html
@@ -81,7 +81,7 @@
 																	<a class="btn btn-primary dropdown-toggle" href="#"
 																		role="button" id="dropdownMenuLink"
 																		data-toggle="dropdown" aria-haspopup="true"
-																		aria-expanded="false">Pending</a>
+																		aria-expanded="false">&nbsp&nbspPending&nbsp&nbsp</a>
 
 																	<div class="dropdown-menu"
 																		aria-labelledby="dropdownMenuLink">
@@ -100,7 +100,7 @@
 																	<a class="btn btn-primary dropdown-toggle" href="#"
 																		role="button" id="dropdownMenuLink"
 																		data-toggle="dropdown" aria-haspopup="true"
-																		aria-expanded="false">Rejected</a>
+																		aria-expanded="false">&nbspRejected&nbsp</a>
 
 																	<!-- <div class="dropdown-menu"
 																		aria-labelledby="dropdownMenuLink">
