--- a/src/main/resources/templates/layouts/editview/editOpenIndent.html
+++ b/src/main/resources/templates/layouts/editview/editOpenIndent.html
@@ -103,7 +103,7 @@
 												<h6 class="box-title">Indent Detail</h6>
 											</div>
 
-											<div class="box-header with-border text-right">
+											<div class="box-header with-border text-right" style="margin-right:5px;">
 												<button type="submit" id="submit"
 													class="btn btn-primary btn-sm">
 													<i class="fa fa-hdd-o" aria-hidden="true"></i> Apply
@@ -317,7 +317,7 @@
 
 																		<td><input type="text"
 																			class="form-control form-control-sm floatNumberField"
-																			id="approvedQty0" title="approvaed qty" 
+																			id="approvedQty0" title="approved qty" 
 																			th:field="*{opeIndentDetail[__${stat.index}__].approvedQty}"
 																			style="text-align: right" readonly></td>
 
