--- a/src/main/resources/templates/layouts/view/viewOpenIndent.html
+++ b/src/main/resources/templates/layouts/view/viewOpenIndent.html
@@ -93,6 +93,14 @@
 
 											<h6 class="box-title">Indent Detail</h6>
 										</div>
+										
+										<div class="box-header with-border text-right">
+												
+												<button type="button" class="btn btn-danger btn-sm"
+													onclick="history.back()">
+													<i class="fa fa-step-backward"></i> Go Back
+												</button>
+											</div>
 										<!-- /.box-header -->
 
 
@@ -492,11 +500,7 @@
 
 
 
-											<div class="box-footer" style="margin: 10px">
 											
-												<input type="button" value="Go back!" class="btn btn-danger"
-													onclick="history.back()">
-											</div>
 
 
 										</form>
